02-orquestacion/v4-2023/dia4/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  selector:
    app: helloworld
    component: backend
  ports:
  - port: 80
    targetPort: http
  type: ClusterIP
